--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Test app</string>
+    <string name="favorites">Favorites</string>
+    <string name="list">List</string>
+    <string name="breed">Breed</string>
+    <string name="sub_breed">\u0020(%d subbreeds)</string>
+    <string name="try_connect_later">Try connect later</string>
+    <string name="refresh">Refresh</string>
+    <string name="error">Error</string>
 </resources>
